[metadata]
name = qutip-qoc
url = https://github.com/qutip/qutip-qoc
description = The QuTiP quantum optimal control package
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Patrick Hopf, Paul Menczel, Alexander Pitchford, Neill Lambert
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    packaging
    qutip
    qutip-qtrl
    numpy>=1.16.6,<2.0
setup_requires =
    cython>=1.0
    packaging

[options.packages.find]
where = src

[options.extras_require]
jopt =
    jax
    jaxlib
    qutip-jax
rl =
    gymnasium>=0.29.1
    stable-baselines3>=2.3.2
tests =
    pytest>=6.0
full =
    %(jopt)s
    %(rl)s
    %(tests)s
